--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
@@ -79,18 +79,18 @@
     &.counted-items-#{$i},
     &.item-per-row--#{$i} {
       @include grid-media-min('sm') {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
       }
 
       @if ($i > 2) {
         @include grid-media-min('md') {
-          grid-template-columns: repeat(3, 1fr);
+          grid-template-columns: repeat(3, minmax(0, 1fr));
         }
       }
 
       @if ($i > 3) {
         @include grid-media-min('lg') {
-          grid-template-columns: repeat(#{$i}, 1fr);
+          grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
         }
       }
 
